syntax = "proto3";
package protocol;
option go_package = "../../protocol";
import "google/protobuf/any.proto";

// protoc -I . --go_out=. --go-grpc_out=./  *.proto
service StreamConfigService{
    rpc ConfigChannel(stream StreamPacket)returns(stream StreamPacket){};
}

message StreamPacket {
    string id = 1;
    int32 code = 2;
    string msg = 3;
    google.protobuf.Any body = 4;
}
message ClientHandShake {
    string client_name = 1;
    string secret = 4;
    repeated string sub_config_list = 5;
}
message Configuration {
    string name = 1;
    string content = 2;
    uint32 meta_id = 3;
    string md5 = 4;
}